# vuprs-server

./: CMakeLists.txt  FPGAConfigTemplate.json  README.md  fpga_config_template.json  fpga_tool.cpp  main.cpp  rk3568_toolchain.cmake  ug-fpga-tool.md
include/: FPGAControl.h  aligned_data_structure.h  fpga_config.h  fpga_control.h  fpga_data_parse.h
source/: FPGAControl.cpp  aligned_data_structure.cpp  fpga_config.cpp  fpga_control.cpp  fpga_data_parse.cpp
